oneclick-monitoring-Thanos/terraform/listener.tf
resource "aws_lb_listener" "http_grafana" {
  load_balancer_arn = aws_lb.monitoring.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.grafana.arn
  }
}

resource "aws_lb_listener" "http_thanos" {
  load_balancer_arn = aws_lb.monitoring.arn
  port              = 9090
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.thanos.arn
  }
}
